--- a/twitter_alamofire_demo/Base.lproj/Main.storyboard
+++ b/twitter_alamofire_demo/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F2073" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -66,34 +67,111 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="103" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ctl-bI-Eag">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="188" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ctl-bI-Eag">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="103" id="U1g-kw-izy" customClass="TweetCell" customModule="twitter_alamofire_demo" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="103"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="188" id="U1g-kw-izy" customClass="TweetCell" customModule="twitter_alamofire_demo" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="188"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="U1g-kw-izy" id="zd2-Er-659">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="102.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="187.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I love tweeting!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="epC-Fs-Q5Z">
-                                                    <rect key="frame" x="8" y="8" width="359" height="20.5"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="17E-Pv-FtB">
+                                                    <rect key="frame" x="8" y="8" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="1QU-Lp-Dah"/>
+                                                        <constraint firstAttribute="height" constant="50" id="MRh-jy-TX7"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Olga Andreeva" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8rq-k7-spO">
+                                                    <rect key="frame" x="66" y="8" width="99" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@olgatron9000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a3a-6P-fXk">
+                                                    <rect key="frame" x="173" y="8" width="101" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.43529412150000002" green="0.4431372583" blue="0.47450980539999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xsv-JB-5dM">
+                                                    <rect key="frame" x="156" y="99.5" width="30" height="30"/>
+                                                    <state key="normal" image="retweet-icon"/>
+                                                    <state key="selected" image="retweet-icon-green"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1234" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xZt-BC-GxI">
+                                                    <rect key="frame" x="186" y="104" width="38.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e1w-22-WdL">
+                                                    <rect key="frame" x="66" y="70" width="30" height="87.5"/>
+                                                    <state key="normal" image="reply-icon"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Here is a tweet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="glH-nO-CM2">
+                                                    <rect key="frame" x="66" y="33" width="293" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="7/3/17" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iIV-4t-zvL">
+                                                    <rect key="frame" x="282" y="8" width="40" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iaq-SQ-Md8">
+                                                    <rect key="frame" x="284.5" y="99.5" width="30" height="30"/>
+                                                    <state key="normal" image="favor-icon"/>
+                                                    <state key="selected" image="favor-icon-red"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1234" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fQY-bQ-9v5">
+                                                    <rect key="frame" x="314.5" y="103.5" width="38.5" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="epC-Fs-Q5Z" firstAttribute="top" secondItem="zd2-Er-659" secondAttribute="top" constant="8" id="L9O-b1-wwg"/>
-                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="epC-Fs-Q5Z" secondAttribute="bottom" constant="8" id="QRV-cN-t51"/>
-                                                <constraint firstItem="epC-Fs-Q5Z" firstAttribute="leading" secondItem="zd2-Er-659" secondAttribute="leading" constant="8" id="Rxk-CL-Rn0"/>
-                                                <constraint firstAttribute="trailing" secondItem="epC-Fs-Q5Z" secondAttribute="trailing" constant="8" id="t3O-Hf-fvX"/>
+                                                <constraint firstItem="17E-Pv-FtB" firstAttribute="leading" secondItem="zd2-Er-659" secondAttribute="leading" constant="8" id="1Z6-4l-slD"/>
+                                                <constraint firstItem="a3a-6P-fXk" firstAttribute="bottom" secondItem="8rq-k7-spO" secondAttribute="bottom" id="4hi-RR-6aT"/>
+                                                <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="iIV-4t-zvL" secondAttribute="trailing" constant="8" id="AFP-i5-d0t"/>
+                                                <constraint firstItem="iaq-SQ-Md8" firstAttribute="leading" secondItem="xZt-BC-GxI" secondAttribute="trailing" constant="60" id="CEe-q2-je1"/>
+                                                <constraint firstItem="iIV-4t-zvL" firstAttribute="top" secondItem="a3a-6P-fXk" secondAttribute="top" id="FJD-EW-iio"/>
+                                                <constraint firstAttribute="bottomMargin" relation="lessThanOrEqual" secondItem="e1w-22-WdL" secondAttribute="bottom" constant="22" id="LDV-wR-mRY"/>
+                                                <constraint firstItem="glH-nO-CM2" firstAttribute="leading" secondItem="8rq-k7-spO" secondAttribute="leading" id="NTH-Rp-kEf"/>
+                                                <constraint firstItem="iaq-SQ-Md8" firstAttribute="centerY" secondItem="e1w-22-WdL" secondAttribute="centerY" id="TLo-vf-63g"/>
+                                                <constraint firstItem="iIV-4t-zvL" firstAttribute="leading" secondItem="a3a-6P-fXk" secondAttribute="trailing" constant="8" id="Yxj-jC-T7W"/>
+                                                <constraint firstItem="a3a-6P-fXk" firstAttribute="leading" secondItem="8rq-k7-spO" secondAttribute="trailing" constant="8" id="cP8-QQ-fol"/>
+                                                <constraint firstItem="fQY-bQ-9v5" firstAttribute="leading" secondItem="iaq-SQ-Md8" secondAttribute="trailing" id="cWK-hX-4x0"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="glH-nO-CM2" secondAttribute="trailing" constant="8" id="e0R-Fu-vyq"/>
+                                                <constraint firstItem="iIV-4t-zvL" firstAttribute="baseline" secondItem="a3a-6P-fXk" secondAttribute="baseline" id="eHW-4e-Aq6"/>
+                                                <constraint firstItem="e1w-22-WdL" firstAttribute="top" secondItem="glH-nO-CM2" secondAttribute="bottom" constant="16" id="fAe-9c-xNL"/>
+                                                <constraint firstItem="xZt-BC-GxI" firstAttribute="centerY" secondItem="e1w-22-WdL" secondAttribute="centerY" id="pgg-y6-KO2"/>
+                                                <constraint firstItem="e1w-22-WdL" firstAttribute="leading" secondItem="glH-nO-CM2" secondAttribute="leading" id="qZW-Su-56q"/>
+                                                <constraint firstItem="Xsv-JB-5dM" firstAttribute="leading" secondItem="e1w-22-WdL" secondAttribute="trailing" constant="60" id="rG3-9R-Wde"/>
+                                                <constraint firstItem="glH-nO-CM2" firstAttribute="top" secondItem="a3a-6P-fXk" secondAttribute="bottom" constant="8" id="rRT-Rf-FcW"/>
+                                                <constraint firstItem="17E-Pv-FtB" firstAttribute="top" secondItem="zd2-Er-659" secondAttribute="top" constant="8" id="saY-Pq-9aO"/>
+                                                <constraint firstItem="xZt-BC-GxI" firstAttribute="leading" secondItem="Xsv-JB-5dM" secondAttribute="trailing" id="ur1-8t-WaO"/>
+                                                <constraint firstItem="Xsv-JB-5dM" firstAttribute="centerY" secondItem="e1w-22-WdL" secondAttribute="centerY" id="vg2-Ig-KFX"/>
+                                                <constraint firstItem="fQY-bQ-9v5" firstAttribute="centerY" secondItem="e1w-22-WdL" secondAttribute="centerY" id="wcw-LV-hen"/>
+                                                <constraint firstItem="8rq-k7-spO" firstAttribute="leading" secondItem="17E-Pv-FtB" secondAttribute="trailing" constant="8" id="y9j-3p-loG"/>
+                                                <constraint firstItem="8rq-k7-spO" firstAttribute="top" secondItem="17E-Pv-FtB" secondAttribute="top" id="yqF-oq-ZVv"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="tweetTextLabel" destination="epC-Fs-Q5Z" id="ZLP-IG-Wsf"/>
+                                            <outlet property="dateLabel" destination="iIV-4t-zvL" id="nNq-eS-ReB"/>
+                                            <outlet property="favoritesLabel" destination="fQY-bQ-9v5" id="JKN-5z-B0m"/>
+                                            <outlet property="nameLabel" destination="8rq-k7-spO" id="jjq-kE-hjO"/>
+                                            <outlet property="profileImageView" destination="17E-Pv-FtB" id="aZF-Lb-KwP"/>
+                                            <outlet property="retweetsLabel" destination="xZt-BC-GxI" id="1gG-4G-Use"/>
+                                            <outlet property="screennameLabel" destination="a3a-6P-fXk" id="IJL-Gt-cxT"/>
+                                            <outlet property="tweetLabel" destination="glH-nO-CM2" id="FPj-U2-592"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -137,5 +215,10 @@
     </scenes>
     <resources>
         <image name="TwitterLogoBlue" width="200" height="200"/>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="favor-icon-red" width="30" height="30"/>
+        <image name="reply-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+        <image name="retweet-icon-green" width="30" height="30"/>
     </resources>
 </document>
